--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -3,7 +3,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <link rel="shortcut-icon" type="image/x-icon" href="{% static 'favicon.ico' %}" />
+    <link rel="shortcut-icon" href="{% static 'favicon.png' %}" />
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta charset="utf-8">
